--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "gatsby-link": "^1.6.46",
     "gatsby-plugin-react-helmet": "^2.0.11",
     "gatsby-plugin-sass": "^1.0.26",
-    "react-helmet": "^5.2.0"
+    "react-helmet": "^5.2.0",
+    "react-sticky-header": "^0.2.0",
+    "react-stickynode": "^2.0.1"
   },
   "keywords": [
     "gatsby"
