--- a/src/components/Projects/projectData.json
+++ b/src/components/Projects/projectData.json
@@ -3,15 +3,16 @@
    {
        "id":1,
        "title": "Chill Time Trivia",
-       "image":"../images/car.jpg",
+       "image":"../../../public/images/pizza.jpg",
        "link": "https://octopied.herokuapp.com/game",
        "github":"https://github.com/kendrak922/Octopied"
    },
    {
     "id":2,
     "title": "Octopied",
-    "image":"../images/cat.jpg",
+    "image":"../../../public/images/cat.jpg",
     "link": "https://octopied.herokuapp.com/game",
     "github":"https://github.com/kendrak922/Octopied"
 }
 ]
+
